Move to new Phab

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,6 +1,6 @@
 {
   "project_id" : "Fridgeface",
-  "conduit_uri" : "https://devportal.imobile3.com/",
+  "conduit_uri" : "https://phab.imobile3.local/",
   "phutil_libraries" : [
     "/opt/cassowary/libcassowary/src/"
   ],
